--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontawesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Moviezone.new - Everything Entertainment : Series - Movies - Music - News</title>
 </head>
 
 <body>
 
   <div class="spinner">
     <div class="loading one"></div>
-    <div class="loading two"></div>
     <div class="loading three"></div>
   </div>
 
@@ -331,7 +331,7 @@
   <script src="jquery.js"></script>
   <script>
     $(window).on("load", function () {
-      $(".spinner").fadeOut("slow");
+      $(".spinner").fadeOut("");
     })
     $(document).ready(function () {
       $('.menu-toggle').click(function () {
