fixed spinner remove

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
   <script src="jquery.js"></script>
   <script>
     $(window).on("load", function () {
-      $(".spinner").fadeOut("");
+      $(".spinner").fadeOut("slow");
     })
     $(document).ready(function () {
       $('.menu-toggle').click(function () {
